--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__
 .cache
 data/**
+*.pytest_cache
 
 # Database
 migrations/
@@ -43,3 +44,4 @@ metricity-config.toml
 # Notes
 TODO.txt
 testingfile.py
+CheatSheet for Testing
